# zou

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  404.html  CLAUDE.local.md.example  CLAUDE.md  CNAME  README.rst  RELEASE.md  UNTESTED_ROUTES.md  conftest.py  index.html  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt  search.html  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  main.yml  pages.yml  pypi.yml  release.yml
api/: index.html
backup/: index.html
configuration/: index.html
development/: index.html
docs/: CNAME  api.md  backup.md  configuration.md  development.md  events.md  file_trees.md  index.css  index.html  index.md  indexer.md  jobs.md  ldap.md  log_rotation.md  openapi.json  plugin.md  plugins.md  swagger-initializer.js  swagger-ui.css  sync.md  troubleshooting.md
events/: index.html
file_trees/: index.html
indexer/: index.html
jobs/: index.html
ldap/: index.html
log_rotation/: index.html
plugin/: index.html
plugins/: index.html
scripts/: check_squash_schema.py  fix_docstring_newlines.py  release.sh
search/: search_index.json
specs/: architecture.md  auth.md  blueprints.md  configuration.md  events.md  models.md  plugins.md  services.md  storage.md  testing.md
sync/: index.html
tests/: base.py  conftest.py
tests/admin/: test_config_check.py  test_get_current_config.py
tests/assets/: test_asset_routes.py  test_asset_tasks.py  test_asset_types.py  test_assets.py  test_search.py
tests/auth/: test_auth_route.py  test_fido.py  test_oidc.py  test_permission.py  test_saml.py
tests/breakdown/: test_breakdown_routes.py  test_routes.py
tests/chats/: test_chat_routes.py  test_chat_service.py
tests/comments/: test_route_comments.py
tests/concepts/: test_route_concepts.py
tests/departments/: test_route_departments.py
tests/edits/: base.py  test_edit_routes.py  test_edit_tasks.py  test_edits.py
tests/entities/: test_route_entities.py
tests/events/: test_event_routes.py
tests/export/: test_assets_to_csv.py  test_casting_to_csv.py  test_edits_to_csv.py  test_persons_to_csv.py  test_playlist_to_csv.py  test_projects_to_csv.py  test_shots_to_csv.py  test_task_types_to_csv.py  test_tasks_to_csv.py  test_time_spents_to_csv.py
tests/files/: test_extract_annotated_frame.py  test_file_routes.py  test_preview_files.py  test_route_file_tree.py  test_route_output_files.py  test_route_working_files.py
tests/fixtures/: playlist.csv
tests/misc/: test_base_model.py  test_commands.py  test_date.py  test_index.py  test_lazy_app.py  test_max_content_length.py  test_paginate.py  test_plugins.py  test_query.py  test_secret_key.py  test_security_headers.py  test_special_chars.py  test_utils_plugins.py
tests/models/: test_attachment_file.py  test_chat_message.py  test_comments.py  test_create_from_import.py  test_crud_create_relations.py  test_crud_fields.py  test_custom_actions.py  test_day_off.py  test_department.py  test_entity.py  test_entity_link.py  test_entity_type.py  test_file_status.py  test_hardware_item.py  test_metadata_descriptor.py  test_milestone.py  test_organisation.py  test_output_file.py  test_output_type.py  test_person.py  test_preview_background_file.py  test_preview_file.py  test_production_schedule_version.py  test_project.py  test_project_status.py  test_project_template.py  test_salary_scale.py  test_schedule_item.py  test_search_filter.py  test_search_filter_group.py  test_software.py  test_status_automation.py  test_studio.py  test_task.py  test_task_status.py  test_task_type.py  test_time_spent.py  test_working_file.py
tests/news/: test_route_news.py
tests/persons/: test_department.py  test_desktop_login_logs.py  test_person_cache_invalidation.py  test_person_routes.py  test_time_spents.py
tests/playlists/: test_annotations.py  test_playlist_routes.py  test_playlists.py
tests/previews/: test_route_movie_streaming.py
tests/projects/: test_route_all_projects.py  test_route_metadata.py  test_route_open_projects.py  test_route_project_settings.py  test_route_project_templates.py  test_route_revision_padding.py  test_route_schedule_items.py  test_route_sync.py
tests/search/: test_search.py
tests/services/: test_assets_service.py  test_auth_service.py  test_base_service.py  test_breakdown_service.py  test_budget_service.py  test_chats_service.py  test_comments_service.py  test_concepts_service.py  test_deletion_service.py  test_departments_service.py  test_edits_service.py  test_emails_service.py  test_entity_service.py  test_events_service.py  test_file_tree_service.py  test_files_service.py  test_index_service.py  test_names_service.py  test_news_service.py  test_notifications_service.py  test_persons_service.py  test_playlists_service.py  test_plugins_service.py  test_preview_files_service.py  test_project_roles.py  test_project_templates_service.py  test_projects_service.py  test_scenes_service.py  test_schedule_service.py  test_shots_service.py  test_stats_service.py  test_status_automation_service.py  test_sync_service.py  test_tasks_service.py  test_time_spents_service.py  test_user_service.py
tests/shared/: test_playlist_sharing.py
tests/shots/: test_asset_instances.py  test_breakdown.py  test_episode_stats.py  test_episode_tasks.py  test_episodes.py  test_scene_tasks.py  test_scenes.py  test_sequence_tasks.py  test_sequences.py  test_shot_routes.py  test_shot_tasks.py  test_shots.py
tests/source/: test_import_kitsu.py  test_import_otio.py
tests/stores/: test_auth_tokens_store.py  test_config_store.py  test_file_store.py  test_file_store_metrics.py
tests/sync/: test_create_from_import.py  test_download_file.py  test_events_sync.py
tests/tasks/: test_preview_processing_failure.py  test_preview_revision.py  test_publish.py  test_route_bot_collaboration.py  test_route_task_change.py  test_route_tasks.py  test_subscription.py  (+2 more)
troubleshooting/: index.html
zou/: __init__.py  cli.py  debug.py  event_stream.py  job_settings.py  review_rooms.py  sentry.py
(+745 files in other folders)
