[metadata]
name = zou
description = API to store and manage the data of your animation production
version = attr: zou.__version__
long_description = file: README.rst
keywords = animation, cg, asset, shot, api, cg production, asset management
license = GNU Affero General Public License v3
license_files = LICENSE
author = CG Wire
author_email = frank@cg-wire.com
url = https://zou.cg-wire.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    audioop-lts==0.2.1; python_version>='3.13'
    babel==2.16.0
    click==8.1.8
    discord.py==2.4.0
    email-validator==2.2.0
    ffmpeg-python==0.2.0
    fido2==1.2.0
    flasgger==0.9.7.1
    flask_bcrypt==1.0.1
    flask_caching==2.3.0
    flask_fixtures==0.3.8
    flask_mail==0.10.0
    flask_principal==0.4.0
    flask_restful==0.3.10
    flask_sqlalchemy==3.1.1
    flask-fs2[swift, s3]==0.7.27
    flask-jwt-extended==4.7.1
    flask-migrate==4.0.7
    flask-socketio==5.5.0
    flask==3.1.0
    gazu==0.10.21
    gevent-websocket==0.10.1
    gevent==24.11.1
    gunicorn==23.0.0
    isoweek==1.3.3
    itsdangerous==2.2.0
    Jinja2==3.1.5
    ldap3==2.9.1
    matterhook==0.2
    meilisearch==0.33.0
    numpy==2.0.1; python_version == '3.9'
    numpy==2.2.1; python_version >= '3.10'
    opencv-python==4.10.0.84
    OpenTimelineIO==0.17.0
    OpenTimelineIO-Plugins==0.17.0
    orjson==3.10.13
    pillow==11.1.0
    psutil==6.1.1
    psycopg[binary]==3.2.3
    pyotp==2.9.0
    pysaml2==7.5.0
    python-nomad==2.0.1
    python-slugify==8.0.4
    python-socketio==5.12.1
    pytz==2024.2
    redis==5.2.1
    requests==2.32.3
    rq==2.1.0
    slackclient==2.9.4
    sqlalchemy_utils==0.41.2
    sqlalchemy==2.0.36
    ua-parser==1.0.0
    werkzeug==3.1.3

[options.package_data]
* = app/file_trees/*.json,migrations/*,migrations/versions/*.py

[options.packages.find]
# ignore tests and build directories
include = zou*

[options.extras_require]
prod =
    gunicorn
    gevent

dev =
    wheel

test =
    fakeredis==2.26.2
    mixer==7.2.2
    pytest-cov==6.0.0
    pytest==8.3.4

monitoring =
    prometheus-flask-exporter==0.23.1
    pygelf==0.4.2
    sentry-sdk==2.19.2

lint =
    autoflake==2.3.1
    black==24.10.0
    pre-commit==4.0.1

[options.entry_points]
console_scripts =
    zou = zou.cli:cli
    zou_playlist = zou.remote.playlist:main
    zou_normalize_movie = zou.remote.normalize_movie:main
